# shard

./: Cargo.toml  README.md  justfile
ci/: Dockerfile.bridge  Dockerfile.lightnode  Dockerfile.validator  run-bridge.sh  run-lightnode.sh  run-validator.sh
examples/tictactoe/: Cargo.toml  README.md
examples/tictactoe/src/: node.rs  state.rs  tx.rs
src/: main.rs  types.rs
src/commands/: create_tx.rs  init.rs  mod.rs  test.rs
src/templates/: Cargo.toml  mod.rs  node.rs  tx.rs
