[package]
name = "shard-sdk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shard"
path = "src/main.rs"


[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2.25"
